--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,11 @@ pandas>=2.2,<3.0
 playwright>=1.49,<2.0
 pywebview>=5.0,<6.0
 pytest>=8.0,<9.0
+json-repair>=0.30,<1.0
+tenacity>=9.0,<10.0
+loguru>=0.7,<1.0
+keyring>=25.0,<26.0
+nh3>=0.2,<1.0
+flask-talisman>=1.1,<2.0
+pydantic>=2.10,<3.0
+instructor>=1.7,<2.0
