CSV import: 1 companies [2026-02-20 12:45]

--- a/pytest.ini
+++ b/pytest.ini
@@ -20,6 +20,7 @@ markers =
     ai: AI discovery, chat, find-similar, models
     discovery: Feature landscape, gap analysis, contexts
     dimensions: Custom dimensions CRUD, values, AI populate
+    entities: Entity system — schema, types, CRUD, attributes, relationships, evidence
     settings: App settings, share tokens, backups, logs, notifications
     static: Static file serving tests
     slow: Tests that take >5 seconds (e.g. async polling)
