CSV import: 1 companies [2026-02-20 14:08]

--- a/pytest.ini
+++ b/pytest.ini
@@ -22,6 +22,7 @@ markers =
     dimensions: Custom dimensions CRUD, values, AI populate
     entities: Entity system — schema, types, CRUD, attributes, relationships, evidence
     capture: Capture engine — file storage, website capture, document download, upload
+    extraction: Extraction pipeline — AI extraction, review queue, contradiction detection
     settings: App settings, share tokens, backups, logs, notifications
     static: Static file serving tests
     slow: Tests that take >5 seconds (e.g. async polling)
