CSV import: 1 companies [2026-02-20 14:58]

--- a/pytest.ini
+++ b/pytest.ini
@@ -23,6 +23,7 @@ markers =
     entities: Entity system — schema, types, CRUD, attributes, relationships, evidence
     capture: Capture engine — file storage, website capture, document download, upload
     extraction: Extraction pipeline — AI extraction, review queue, contradiction detection
+    features: Feature standardisation — canonical vocabulary, mappings, merge, resolve
     settings: App settings, share tokens, backups, logs, notifications
     static: Static file serving tests
     slow: Tests that take >5 seconds (e.g. async polling)
