--- a/pytest.ini
+++ b/pytest.ini
@@ -24,6 +24,7 @@ markers =
     capture: Capture engine — file storage, website capture, document download, upload
     extraction: Extraction pipeline — AI extraction, review queue, contradiction detection
     features: Feature standardisation — canonical vocabulary, mappings, merge, resolve
+    lenses: Analysis lenses — competitive matrix, gaps, positioning, pricing, design, temporal
     settings: App settings, share tokens, backups, logs, notifications
     static: Static file serving tests
     slow: Tests that take >5 seconds (e.g. async polling)
