CSV import: 1 companies [2026-02-20 16:48]

--- a/pytest.ini
+++ b/pytest.ini
@@ -26,6 +26,8 @@ markers =
     features: Feature standardisation — canonical vocabulary, mappings, merge, resolve
     lenses: Analysis lenses — competitive matrix, gaps, positioning, pricing, design, temporal
     reports: Reporting & synthesis — templates, generation, AI reports, CRUD, export
+    monitoring: Intelligence & monitoring — monitors, checks, change feed, auto-setup, stats
+    insights: Insights & hypotheses — pattern detection, hypothesis tracking, confidence scoring
     settings: App settings, share tokens, backups, logs, notifications
     static: Static file serving tests
     slow: Tests that take >5 seconds (e.g. async polling)
