CSV import: 1 companies [2026-02-20 17:10]

--- a/pytest.ini
+++ b/pytest.ini
@@ -28,6 +28,8 @@ markers =
     reports: Reporting & synthesis — templates, generation, AI reports, CRUD, export
     monitoring: Intelligence & monitoring — monitors, checks, change feed, auto-setup, stats
     insights: Insights & hypotheses — pattern detection, hypothesis tracking, confidence scoring
+    playbooks: Research playbooks — reusable methodology templates, runs, step tracking
+    crossproject: Cross-project intelligence — entity overlap, attribute sync, cross-project analysis
     settings: App settings, share tokens, backups, logs, notifications
     static: Static file serving tests
     slow: Tests that take >5 seconds (e.g. async polling)
