CSV import: 1 companies [2026-02-21 10:35]

--- a/pytest.ini
+++ b/pytest.ini
@@ -33,6 +33,7 @@ markers =
     settings: App settings, share tokens, backups, logs, notifications
     static: Static file serving tests
     slow: Tests that take >5 seconds (e.g. async polling)
+    enrichment: Enrichment via MCP data sources — client wrappers, orchestrator, API endpoints
 
 # Short test summary info
 addopts = -v --tb=short --strict-markers
